fix: rett opp feil farge i dark mode på accordion etter refactor

--- a/packages/accordion/accordion.scss
+++ b/packages/accordion/accordion.scss
@@ -52,6 +52,7 @@
     &__title {
         @include jkl.reset-outline;
 
+        color: inherit;
         background-color: transparent;
         position: relative;
         padding: jkl.$spacing-m;
